--- a/raylib-rendering/raylib-rendering.csproj
+++ b/raylib-rendering/raylib-rendering.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Raylib-cs" Version="4.5.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Lighting" />
+  </ItemGroup>
+
 </Project>
