working on shadow mapping framework

--- a/raylib-rendering/Properties/launchSettings.json
+++ b/raylib-rendering/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "raylib-rendering": {
       "commandName": "Project",
-      "workingDirectory": "C:\\Users\\Julian\\source\\repos\\raylib-rendering\\raylib-rendering"
+      "workingDirectory": "C:\\Users\\julia\\Projects\\raylib-rendering\\raylib-rendering"
     }
   }
 }
